sdk/tests/snapshots/test_struct__smoke_basic_with_readme.snap
---
source: sdk/tests/test_struct.rs
expression: ser
---
type: struct@v1
name: BasicStructWithReadme
namespace: abc.corp.test
description: "# test\nthis is a struct description\n"
version: 1
fields:
  a:
    name: a
    namespace: abc.corp.test
    description: field a
    version: ~
    type: i32
    optional: false
